# chris_ros_modeling

./: .gitignore  README.md  ROADMAP.md  requirements.txt
chris_haros_model_merger/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
chris_haros_model_merger/doc/: haros_install_investigation.md
chris_haros_model_merger/src/chris_haros_model_merger/: .pylintrc  base_remodeler.py  model_merger.py  remodelers.py
chris_package_modeler/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
chris_package_modeler/src/chris_package_modeler/: .pylintrc  package_modeler.py
chris_ros_modeling/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
chris_ros_modeling/src/chris_ros_modeling/: base_metamodel.py  metamodels.py  model_loader.py  ros_model.py
chris_ros_modeling/src/chris_ros_modeling/deployments/: action.py  machine.py  node.py  nodelet.py  nodelet_manager.py  parameter.py  service.py  topic.py
chris_ros_modeling/src/chris_ros_modeling/specifications/: node_specification.py  package_specification.py  type_specification.py
chris_ros_modeling/src/chris_ros_modeling/utilities/: filters.py  logger.py  utility.py
chris_ros_snapshot/: CHANGELOG.rst  CMakeLists.txt  README.md  generate_documentation.sh  package.xml  setup.py
chris_ros_snapshot/src/chris_ros_snapshot/: action_bank_builder.py  action_builder.py  bank_builders.py  base_builders.py  entity_builders.py  machine_bank_builder.py  machine_builder.py  node_bank_builder.py  node_builder.py  parameter_bank_builder.py  parameter_builder.py  remapper_bank.py  ros_model_builder.py  ros_snapshot.py  ros_utilities.py  service_bank_builder.py  service_builder.py  topic_bank_builder.py  topic_builder.py
chris_rrbot_modeling/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
chris_rrbot_modeling/config/: rrbot_control_action.yaml
chris_rrbot_modeling/example/yaml/: ros_model_machine_bank.yaml  ros_model_node_bank.yaml  ros_model_node_specification_bank.yaml  ros_model_nodelet_bank.yaml  ros_model_package_specification_bank.yaml  ros_model_parameter_bank.yaml  ros_model_service_bank.yaml
chris_rrbot_modeling/launch/: rrbot_action_demo.launch  rrbot_control_action.launch  rrbot_rqt_action.launch  rrbot_rqt_action.perspective
chris_rrbot_modeling/model_merger_example/: rrbot.yaml
chris_rrbot_modeling/model_merger_example/example_merged_output/yaml/: ros_model_action_specification_bank.yaml  ros_model_message_specification_bank.yaml  ros_model_node_bank.yaml  ros_model_node_specification_bank.yaml  ros_model_nodelet_bank.yaml  ros_model_package_specification_bank.yaml  ros_model_parameter_bank.yaml  ros_model_service_bank.yaml  ros_model_topic_bank.yaml
chris_rrbot_modeling/model_merger_example/haros_output/data/: projects.json
chris_rrbot_modeling/model_merger_example/haros_output/data/default/: configurations.json  packages.json  rules.json  summary.json
chris_rrbot_modeling/model_merger_example/haros_output/data/default/compliance/source/: chris_rrbot_modeling.json
chris_rrbot_modeling/model_merger_example/haros_output/data/default/metrics/: chris_rrbot_modeling.json
chris_rrbot_modeling/model_merger_example/haros_output/projects/default/: haros.db
chris_rrbot_modeling/model_merger_example/output/pickle/: ros_model_action_bank.pkl  ros_model_action_specification_bank.pkl  ros_model_machine_bank.pkl  ros_model_message_specification_bank.pkl  ros_model_node_bank.pkl  ros_model_node_specification_bank.pkl  ros_model_nodelet_bank.pkl  ros_model_nodelet_manager_bank.pkl  ros_model_package_specification_bank.pkl  ros_model_parameter_bank.pkl  ros_model_service_bank.pkl  ros_model_service_specification_bank.pkl  ros_model_topic_bank.pkl
chris_rrbot_modeling/model_merger_example/output/yaml/: ros_model_action_bank.yaml  ros_model_node_bank.yaml  ros_model_node_specification_bank.yaml  ros_model_nodelet_bank.yaml  ros_model_nodelet_manager_bank.yaml  ros_model_parameter_bank.yaml  ros_model_service_specification_bank.yaml
chris_rrbot_modeling/src/chris_rrbot_modeling/: rrbot_action_demo.py
(+7 files in other folders)
