<?xml version="1.0"?>
<package format="2">
  <name>chris_ros_snapshot</name>
  <version>0.0.0</version>
  <description>Extract model of ROS deployment using chris_ros_modeling Metamodeling tools</description>

  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <author email="william.drumheller.16@cnu.edu">William Drumheller</author> -->
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/chris_ros_modeling</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>chris_ros_modeling</exec_depend>
  <exec_depend>rosgraph</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
